# Python-UniFi-API-client

./: .gitignore  README.md  pyproject.toml
docs/: API.md  Examples.md  Getting-Started.md
unifi_api_client/: __init__.py  client.py  exceptions.py
